istiofiles/virtual-service-recommendation-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - "recommendation.local"
  gateways:
  - recommendation-gw
  http:
  - route:
    - destination:
        host: recommendation
        port:
          number: 8080
        # subset: version-v1
      weight: 100
---
