istiofiles/virtual-service-recommendation-v2_retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - "recommendation.local"
  gateways:
  - recommendation-gw
  http:
  - route:
    - destination:
        host: recommendation
    retries:
      attempts: 3
      perTryTimeout: 2s
---
