istiofiles/virtual-service-recommendation-v3.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - "recommendation.local"
  gateways:
  - recommendation-gw
  http:
  - route:
    - destination:
        host: recommendation
        subset: version-v3
      weight: 100
---
