istiofiles/virtual-service-safari-recommendation-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - "recommendation.local"
  gateways:
  - recommendation-gw
  http:
  - route:
    - destination:
        host: recommendation
        subset: version-v2
    match:
    - headers:
        user-agent:
          regex: .*Safari.*
  # - route:
  #   - destination:
  #       host: recommendation
  #       subset: version-v2
  #   match:
  #   - headers:
  #       secret:
  #         regex: .*123.*
  - route:
    - destination:
        host: recommendation
        subset: version-v1
---
